# DeepLearning

./: .clang-format  .gitignore  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
cpp/jason/: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile  main.cpp  myprint.cpp  myprint.h
cpp/jason/jason/: CMakeLists.txt  Cache.h  STDMove.h  SharePTR.h  jason.cpp  jason.h  network.h
cpp/jason/jason/air/: air_base.h  air_pthread_reader_writer.h  air_thread_safe_queue.h  air_unordered_map.h
cpp/jason/jason/base/: TPThreadSafeQueue.h
cpp/jason/jason/coroutine/: co  coroutineImpl.cpp
cpp/jason/jason/molest_cpp_11/: cpp_molest.cpp  cpp_molest.h
cpp/jason/jason/platform/linux/epoll/: epoll.cpp  epoll.h
cpp/jason/sh/: build.sh
cpp/test/: Blocks.cpp  Blocks.mm  MultiThreadDemo.h  MultiThreadDemo.m  OSLockPerformanceTest.h  OSLockPerformanceTest.m  cplusplus_various_param.h  cpp_mplest.cpp  cpp_mplest.hpp  crop.c  java.swift  main.cpp  main.m  multithread_memory_model.cpp  multithread_memory_model.hpp  ntpd.cpp  ntpd.h  thread_pool.cpp  thread_pool.h
cpp/test.xcodeproj/: project.pbxproj
go/kibana/: go.mod  kibana.go  kibana_test.go
go/kibana/protobuf/: KibanaLog.pb.go  KibanaLog.proto
go/main/: application  go.mod  main.go
go/music/: MusicPlayer.go  go.mod
go/src/: MusicPlayer_test.go
go/src/cgo/: cgoDemo.go
kotlin/: build.gradle  settings.gradle
kotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/src/main/kotlin/: main.kt
kotlin/src/main/kotlin/channel/: DeepLearningChannel.kt
kotlin/src/main/kotlin/collections/: Container.kt
kotlin/src/main/kotlin/coroutines/: DeepLearningCoroutine.kt
kotlin/src/main/kotlin/delegation/: Delegation.kt
kotlin/src/main/kotlin/scope/: ScopeFunction.kt
node/: A.json  B.json  CosineSimilarity.js  package.json
python/: main.ipynb  main.py
python/.ipynb_checkpoints/: main-checkpoint.ipynb
python/DeepLearningPython/: ConvertRawDataToJPG.py  FileUtility.py  ImageUtility.py  Python3-example.py  __init__.py  coroutine.py  get_biconfig.py  main.py  yuv2rgb.py
python/DeepLearningPython/langchain/: .env  HelloLangchain.py  openai-test.py  test_vertexai.py
python/DeepLearningPython/pytorch/: mnist.pth  mnist.py
python/DeepLearningPython/pytorch/model_net/: ConvNet.py
rust/: Cargo.toml  Makefile
rust/.cargo/: config.toml
rust/src/: main.rs
shell/: badcase_collect.sh  ffmpeg_mulprocess.sh
(+4 files in other folders)
