[package]
name = "rust"
version = "0.1.0"
edition = "2021"
resolver = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# openssl = { version = "0.10", features = ["vendored"] }
# rusqlite = { version = "0.31.0", features = ["bundled"] }
# reqwest = { version = "0.12", features = ["json"] }
# tokio = { version = "1", features = ["full"] }
